[JIT] Introduce AI-Extension API version 2
Summary: The new AI-Extension API supports retrieving the narrow OOP layout and array
layout of the JVM, as well as accessing fields and static fields of Java objects.

Testing: test/hotspot/jtreg/compiler/alibaba/TestAIExtension.java

Reviewers: kuaiwei, JoshuaZhuwj

Issue: https://github.com/dragonwell-project/dragonwell21/issues/291